Dodaj kartico stanja bančnih računov (110x) na nadzorno ploščo
